--- a/heatmap.html
+++ b/heatmap.html
@@ -14,7 +14,7 @@ $(document).ready(function() {
   two.style.width = 1920;
 });
 
-const CSV_NAME = 'TODO: put your CSV filename here';
+const CSV_NAME = './Heidi-1.csv';
 
 //ajax GET request to load the csv file and launch the heatmap
 $(document).ready(function() {
@@ -58,14 +58,27 @@ function processData(allText) {
   // Note that there are two more "TODO"s near the bottom of this file
 
 
+  var len = allTextLines.length;
 
+  //start after header
+  for (var i = 1; i < len - 1; i++) {
 
+    //each line of data represented by an array. 0th element is X, 1st is Y, 2nd is time/date.
+    var oneLine = allTextLines[i].split(',');
+    console.log(parseFloat(oneLine[0].substring(1, oneLine[0].length-1)));
+    console.log(parseFloat(oneLine[1].substring(1, oneLine[1].length-1)));
+    console.log("dicks");
+    var point = {
+      x: parseFloat(oneLine[0].substring(1, oneLine[0].length-1)),
+      y: parseFloat(oneLine[1].substring(1, oneLine[1].length-1)),
+      value: 1
+    };
+    datapoints.push(point);
 
+  }
 
-
-
-
-
+  $('.heatmap').css('height', '1200px');
+  $('.heatmap').css('width', '1920px');
 
   //Creates a heatmap instance
   var heatmapInstance = h337.create({
@@ -75,7 +88,7 @@ function processData(allText) {
   //Initializes a heatmap data object with the lines
   //stack datapoints
   var data = {
-    max: 4, // TODO: sets the maximum value to be displayed as red in the heatmap. Find a value (different for each log file) such that there are a couple red areas
+    max: 7, // TODO: sets the maximum value to be displayed as red in the heatmap. Find a value (different for each log file) such that there are a couple red areas
     min: 0,
     data: datapoints
   };
@@ -87,7 +100,7 @@ function processData(allText) {
 <body style="margin:0">
 <h2>Heatmap</h2>
 <div id="one" class="heatmap" style="position: relative;">
-<img id="two" class="heatmap-canvas" id="heatmap-canvas" style="position: absolute; left: 0px; top: 0px" src="TODO: put your screen capture image filename here">
+<img id="two" class="heatmap-canvas" id="heatmap-canvas" style="position: absolute; left: 0px; top: 0px" src="./space station.png">
 </div>
 </body>
 </html>
